navfoot services.html

--- a/User/service/services.html
+++ b/User/service/services.html
@@ -1,9 +1,11 @@
+<?php session_start(); ?>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
+    <title>Services - Urbiztondo, Pangasinan</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,6 +13,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="body-base">
+
+    <nav class="navbar" role="navigation">
+        <div class="logo">
+            <img src="../images/logo.png" alt="Municipality of Urbiztondo Logo">
+            <span>Municipality of Urbiztondo</span>
+        </div>
+        <ul>
+            <li><a href="../home.html">Home</a></li>
+            <li><a href="../aboutus.html">About Us</a></li>
+            <li><a href="service.php" class="active">Services</a></li>
+            <li><a href="../appointment.html">Appointment</a></li>
+            <li><a href="#">Health</a></li>
+            <li><a href="../forms.html">Forms</a></li>
+            <li><a href="../paytrack.html">Tracker</a></li>
+            <?php if (isset($_SESSION['user_id'])): ?>
+            <li><a href="profile.php">Profile</a></li>
+            <li><a href="http://localhost/Service/logout.php">Log out</a></li>
+            <?php else: ?>
+            <li><a href="http://localhost/Service/login.html">Log-in/Register</a></li>
+            <?php endif; ?>
+        </ul>
+    </nav>
+    
     <div id="portal-container" class="portal-container">
         <div id="service-selection-view" class="service-selection-view">
             <div class="main-card">
@@ -33,15 +58,7 @@
                         <p class="service-btn-description">Marriage, etc.</p>
                     </button>
                 </div>
-                <div class="home-button-container">
-                    <a href="index.html" class="continue-btn">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
-                            <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
-                        </svg>
-                        Home
-                    </a>
                 </div>
-            </div>
         </div>
 
         <div id="service-detail-view" class="hidden-content service-detail-view-container">
@@ -73,6 +90,27 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <img src="images/logo.png" alt="Urbiztondo Logo" onerror="this.src='https://placehold.co/100x100/CCCCCC/666666?text=Logo+Error';">
+            <div class="footer-text">
+                <h3>Bayan ng Urbiztondo</h3>
+                <p>Pangasinan, Philippines</p>
+                <p class="contact-info">
+                    📞 (075) 555-1234 | 📧 contact@urbiztondo.gov.ph
+                </p>
+                <p class="footer-links">
+                    <a href="#">Terms of Use</a> |
+                    <a href="#">Privacy Policy</a>
+                </p>
+            </div>
+            <img src="images/seal_logo.png" alt="Pangasinan Logo" onerror="this.src='https://placehold.co/100x100/CCCCCC/666666?text=Seal+Error';">
+        </div>
+        <p class="copyright">
+            © 2025 Municipality of Urbiztondo. All rights reserved.
+        </p>
+    </footer>
 
 <script src="service.js"></script> 
 </body>
