--- a/Admin/com&notiffinal.html
+++ b/Admin/com&notiffinal.html
@@ -54,6 +54,11 @@
     .head-title h1 {
       font-size: 2.2rem;
     }
+
+    /* REMOVE UNDERLINE FROM SIDEBAR LINKS */
+    #sidebar a {
+      text-decoration: none !important;
+    }
   </style>
 </head>
 <body>
@@ -66,7 +71,7 @@
       <li class="active">
         <a href="#" class="admin-cms-link">
           <i class='bx bxs-bell'></i>
-          <span class="text">Comm & Notif</span>
+          <span class="text">Communication and Notification</span>
         </a>
       </li>
     </ul>
@@ -82,7 +87,7 @@
 
   <section id="content">
     <nav>
-      <i class='bx bx-menu' ></i>
+      <i class='bx bx-menu'></i>
       <input type="checkbox" id="switch-mode" hidden>
       <label for="switch-mode" class="switch-mode"></label>
       <a href="#" class="profile">
